# PID

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: server.js
backend/cosmwasm_contract/: Cargo.toml
backend/cosmwasm_contract/src/: contract.rs  lib.rs  main.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/pages/: IdentityForm.js
zk-proofs/circuits/: identity.circom  input.json
