[package]
name = "cosmwasm_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { version = "0.16", features = ["staking"] }
cosmwasm-storage = "0.16"
cosmwasm-schema = "0.16"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"
